--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ wagtail>=2.15,<5.0
 wagtailmedia
 graphene-django>=3.0.0
 factory-boy==3.2.1
-wagtail-factories==3.1.0
+wagtail-factories>=4.0.0,<4.1.0
 django-cors-headers==3.4.0
 wagtail-headless-preview
