--- a/setup.cfg
+++ b/setup.cfg
@@ -20,14 +20,11 @@ keywords =
 classifiers =
   Development Status :: 4 - Beta
   Intended Audience :: Science/Research
-  Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11
   Framework :: Wagtail
-  Framework :: Wagtail :: 2
-  Framework :: Wagtail :: 3
   Framework :: Wagtail :: 4
   Topic :: Scientific/Engineering
 long_description = file:README.md
@@ -36,15 +33,14 @@ license_files =
   LICENSE.txt
 
 [options]
-python_requires = >= 3.7
+python_requires = >= 3.8
 setup_requires =
   setuptools >= 41
   pip >= 19
 include_package_data = true
 packages = find:
 install_requires =
-    Django>=3.2, <4.2
-    wagtail>=2.15, <5.0
+    wagtail>=4.1
     graphene-django>=3, <4
     wagtail-headless-preview
 
