--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,30 +19,21 @@ repos:
       - id: end-of-file-fixer
       - id: check-added-large-files
   - repo: https://github.com/psf/black
-    rev: 23.1.0
+    rev: 23.3.0
     hooks:
       - id: black
-  - repo: https://github.com/pycqa/isort
-    # isort config is in setup.cfg
-    rev: 5.12.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: 'v0.0.272'
     hooks:
-      - id: isort
-  - repo: https://github.com/pycqa/flake8
-    # flake8 config is in setup.cfg
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-bugbear
-          - flake8-comprehensions
-          - flake8-assertive
-  - repo: https://github.com/asottile/blacken-docs
-    rev: 1.13.0
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+  - repo: https://github.com/adamchainz/blacken-docs
+    rev: 1.14.0
     hooks:
       - id: blacken-docs
-        additional_dependencies: [black==22.12.0]
+        additional_dependencies: [black==23.3.0]
   - repo: https://github.com/rtts/djhtml
-    rev: v2.0.0
+    rev: 3.0.6
     hooks:
       - id: djhtml
   - repo: https://github.com/PyCQA/doc8
