--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -3,7 +3,7 @@ black>=22.12.0
 
 # Runtime requirements
 Django>=3.2,<4.2
-wagtail>=4.1
+wagtail>=2.15,<5.0
 graphene-django>=3.0.0
 factory-boy==3.2.1
 wagtail-factories>=4.0.0,<4.1.0
