--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+testing = [
+    "coverage[toml]>=7.2.7,<8.0",
+]
+
 docs = [
     "Sphinx>=7.0,<8.0",
     "sphinx-wagtail-theme>=6.0,<7.0",
@@ -72,3 +76,44 @@ exclude = [
 [tool.doc8]
 ignore = ["D000", "D001"]
 ignore_path = ["docs/build", "src", "tests", ".git", ".tox", ".venv", "venv"]
+
+[tool.coverage.run]
+branch = true
+parallel = true
+concurrency = ["multiprocessing", "thread"]
+
+source = ["grapple"]
+
+omit = ["**/migrations/*", "docs/*", "tests/*", "testapp/*"]
+
+[tool.coverage.paths]
+source = ["grapple", ".tox/py*/**/site-packages"]
+
+[tool.coverage.report]
+omit = ["**/migrations/*", "docs/*", "tests/*", "testapp/*"]
+show_missing = true
+ignore_errors = true
+skip_empty = true
+skip_covered = true
+exclude_lines = [
+    # Have to re-enable the standard pragma
+    "pragma: no cover",
+
+    # Don't complain about missing debug-only code:
+    "def __repr__",
+    "if self.debug",
+
+    # Don't complain if tests don't hit defensive assertion code:
+    "raise AssertionError",
+    "raise NotImplementedError",
+
+    # Don't complain if non-runnable code isn't run:
+    "if 0:",
+    "if __name__ == .__main__.:",
+
+    # Don't complain about abstract methods, they aren't run:
+    "@(abc.)?abstractmethod",
+
+    # Nor complain about type checking
+    "if TYPE_CHECKING:",
+]
