--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,14 @@ concurrency:
 permissions:
   contents: read # to fetch code (actions/checkout)
 
+env:
+  FORCE_COLOR: "1" # Make tools pretty.
+  TOX_TESTENV_PASSENV: FORCE_COLOR
+  PIP_DISABLE_PIP_VERSION_CHECK: "1"
+  PIP_NO_PYTHON_VERSION_WARNING: "1"
+  # Keep in sync with .pre-commit-config.yaml/default_language_version/python.
+  PYTHON_LATEST: "3.11"
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -21,7 +29,6 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
-        wagtail-version: ['4.1', '4.2']
         DATABASE_URL: ['sqlite:///db.sqlite3', 'postgres://postgres:postgres@localhost/postgres']
 
     env:
@@ -42,29 +49,15 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
-          cache-dependency-path: |
-            tests/requirements.txt
 
-      - name: Install Dependencies
+      - name: ⬇️ Install dependencies
         run: |
-          cd tests
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+          python -Im pip install --upgrade pip
+          python -Im pip install flit tox tox-gh-actions
+          python -Im flit install --symlink
 
-      - name: Install Wagtail package
-        if: ${{ matrix.wagtail-version != 'main' }}
-        run: |
-          python -m pip install wagtail==${{ matrix.wagtail-version }}
+      - name: 🏗️ Build wheel
+        run: python -Im flit build --format wheel
 
-      - name: Install Wagtail main
-        if: ${{ matrix.wagtail-version == 'main' }}
-        run: |
-          git clone https://github.com/wagtail/wagtail.git
-          python -m pip install ./wagtail
-
-      - name: Run Tests
-        run: |
-          cd tests
-          python manage.py migrate
-          python manage.py test
+      - name: 🧪 Run tox targets for Python ${{ matrix.python-version }}
+        run: tox --installpkg ./dist/*.whl
