--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,20 +1,14 @@
-# Test requirements.
-black>=23.7.0
-ruff=0.0.285
+pre-commit
 
 # Runtime requirements
-Django>=3.2,<5.0
-wagtail>=4.1
-graphene-django>=3.0.0
-factory-boy==3.2.1
-wagtail-factories>=4.1.0
-django-cors-headers==3.4.0
+django-cors-headers>=4.2.0
 wagtailmedia>=0.13
-wagtail-headless-preview
 dj-database-url==2.1.0
-# for postgres testing
+
 psycopg2>=2.9.5,<3.0.0
 
+# Test requirements.
+-r requirements-dev.txt
 
 # Your app in editable mode.
 -e ../
