--- a/tox.ini
+++ b/tox.ini
@@ -28,15 +28,11 @@ setenv =
 change_dir = {tox_root}/tests
 
 deps =
-    flit>=3.8
-    coverage[toml]>=7.0,<8.0
-    factory-boy==3.2.1
-    wagtail-factories>=4.1.0
     django-cors-headers>=4.2.0
     wagtailmedia>=0.13
     dj-database-url==2.1.0
     psycopg2>=2.9.5,<3.0.0
-    tblib==1.7.0
+    -r {tox_root}/tests/requirements-test.txt
 
     django32: Django>=3.2,<3.3
     django41: Django>=4.1,<4.2
