--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,12 +36,15 @@ jobs:
 
     services:
       postgres:
-        image: postgres:14
+        image: bitnami/postgresql:14
         env:
           POSTGRES_PASSWORD: postgres
+          POSTGRESQL_PASSWORD: postgres
+          POSTGRESQL_FSYNC: "off"
+          POSTGRESQL_DATA_DIR: /dev/shm/pgdata
         ports:
           - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        options: --health-cmd "pg_isready -d postgres -U postgres -p 5432" --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - uses: actions/checkout@v3
