Split up test to sqlite and postgres

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,11 @@ python =
     3.10: py310
     3.11: py311
 
+[gh-actions:env]
+DB =
+    sqlite: sqlite
+    postgres: postgres
+
 [testenv]
 package = wheel
 wheel_build_env = .pkg
