--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,17 +22,48 @@ env:
   PYTHON_LATEST: "3.11"
 
 jobs:
-  tests:
+  tests-sqlite:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      max-parallel: 4
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
-        DATABASE_URL: ['sqlite:///db.sqlite3', 'postgres://postgres:postgres@localhost/postgres']
 
-    env:
-      DATABASE_URL: ${{matrix.DATABASE_URL}}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: ⬇️ Install dependencies
+        run: |
+          python -Im pip install --upgrade pip
+          python -Im pip install flit tox tox-gh-actions
+          python -Im flit install --symlink
+
+      - name: 🏗️ Build wheel
+        run: python -Im flit build --format wheel
+
+      - name: 🧪 Run tox targets for Python ${{ matrix.python-version }}
+        env:
+          DB: sqlite
+        run: tox --installpkg ./dist/*.whl
+
+      - name: ⬆️ Upload coverage data
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-data
+          path: tests/.coverage*
+          if-no-files-found: ignore
+          retention-days: 1
+
+  tests-postgres:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11']
 
     services:
       postgres:
@@ -63,6 +94,9 @@ jobs:
         run: python -Im flit build --format wheel
 
       - name: 🧪 Run tox targets for Python ${{ matrix.python-version }}
+        env:
+          DB: sqlite
+          DATABASE_URL: 'postgres://postgres:postgres@localhost:5432/postgres'
         run: tox --installpkg ./dist/*.whl
 
       - name: ⬆️ Upload coverage data
@@ -75,7 +109,7 @@ jobs:
 
   coverage:
     runs-on: ubuntu-latest
-    needs: tests
+    needs: [tests-sqlite, tests-postgres]
 
     steps:
       - uses: actions/checkout@v3
