--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ min_version = 4.0
 envlist =
     py{38,39,310}-django{32,41}-wagtail{41,50,51}
     py{311}-django{41,42}-wagtail{50,51}
+    py{311}-django{42}-wagtail{60}
     interactive
 
 [gh-actions]
@@ -48,6 +49,7 @@ deps =
     wagtail41: wagtail>=4.1,<4.2
     wagtail50: wagtail>=5.0,<5.1
     wagtail51: wagtail>=5.1,<5.2
+    wagtail60: wagtail>=6.0,<6.1
     interactive: wagtail>=4.1
 
 install_command = python -Im pip install -U {opts} {packages}
