Don't upgrade packages; update matrix

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,8 @@
 min_version = 4.0
 
 envlist =
-    py{38,39,310,311,312}-django{42}-wagtail{52,60}
-    py{310,311,312}-django{50}-wagtail{52,60}
+    py{38,39,310,311,312}-django{42}-wagtail{62}
+    py{310,311,312}-django{50}-wagtail{62}
     interactive
 
 [gh-actions]
@@ -47,9 +47,11 @@ deps =
     django50: Django>=5.0,<5.1
     wagtail52: wagtail>=5.2,<6.0
     wagtail60: wagtail>=6.0,<6.1
+    wagtail61: wagtail>=6.1,<6.2
+    wagtail62: wagtail>=6.2,<6.3
     interactive: wagtail>=5.2
 
-install_command = python -Im pip install -U {opts} {packages}
+install_command = python -Im pip install {opts} {packages}
 
 commands =
     python -m coverage run manage.py test {posargs: -v1} --exclude-tag=needs-custom-settings
