Add support for Wagtail 6.3

--- a/tox.ini
+++ b/tox.ini
@@ -2,17 +2,18 @@
 min_version = 4.0
 
 envlist =
-    py{38,39,310,311,312}-django{42}-wagtail{62}
-    py{310,311,312}-django{50}-wagtail{62}
+    py{39,310,311,312}-django{42}-wagtail{63,64}
+    py{310,311,312}-django{50}-wagtail{63,64}
+    py{310,311,312,313}-django{51}-wagtail{63,64}
     interactive
 
 [gh-actions]
 python =
-    3.8: py38
     3.9: py39
     3.10: py310
     3.11: py311
     3.12: py312
+    3.13: py313
 
 [gh-actions:env]
 DB =
@@ -45,8 +46,9 @@ deps =
 
     django42: Django>=4.2,<5.0
     django50: Django>=5.0,<5.1
-    wagtail62: wagtail>=6.2,<6.3
-    interactive: wagtail>=5.2
+    django51: Django>=5.1,<5.2
+    wagtail63: wagtail>=6.3,<6.4
+    wagtail64: wagtail>=6.4,<6.5
 
 commands =
     python -m coverage run manage.py test {posargs: -v1} --exclude-tag=needs-custom-settings
@@ -73,7 +75,7 @@ description = An interactive environment for local testing purposes
 base_python = python3.11
 
 deps =
-    wagtail>=5.2
+    wagtail>=6.3
 
 commands_pre =
     python manage.py makemigrations
