--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-added-large-files
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    # keep in sync with .github/workflows/ruff.yml
+    # keep in sync with tests/requirements.txt
     rev: 'v0.9.4'
     hooks:
       - id: ruff
